# krux

./: .gitignore  LICENSE  README.md  biome.json  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v2.0-MILESTONE-AUDIT.md
.planning/phases/01-backend-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-frontend-document-viewer/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/plans/: 2026-03-01-tauri-terminal-app-design.md  2026-03-01-tauri-terminal-app-plan.md  2026-03-02-background-images-design.md  2026-03-02-background-images-plan.md  2026-03-02-start-screen-design.md  2026-03-02-start-screen-plan.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat.rs  fs.rs  lib.rs  projects.rs  pty.rs  settings.rs
src/components/: ProjectFavicon.tsx  UpdateChecker.tsx
src/hooks/: useGitBranch.ts  useGitStatus.ts  useKeyboardMode.ts  useTauri.ts
src/lib/: agents.ts  chatDb.ts  keybindings.ts  themes.ts  wallpapers.ts
src/main/: index.ts  menu.ts
src/plugins/: events.ts  index.ts  types.ts
src/preload/: index.ts
src/renderer/: index.css  index.html  main.tsx
src/stores/: appStore.ts
(+116 files in other folders)
